fixed results page tab dark mode

--- a/client/src/components/CompanyResultsSection/CompanyResultsSection.scss
+++ b/client/src/components/CompanyResultsSection/CompanyResultsSection.scss
@@ -39,16 +39,6 @@
       border-radius: 5px 5px 0 0;
       // background: $light-mode-background-color;
       // color: $light-mode-text-color;
-
-      &--light {
-        background: $light-mode-background-color;
-        color: $light-mode-text-color;
-      }
-
-      &--dark {
-        background: $dark-mode-background-color;
-        color: $dark-mode-text-color;
-      }
     }
 
     &--disabled {
